--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "python.pythonPath": "/usr/bin/python3",
+    "python.linting.pylintArgs": ["--generate-members", "--extension-pkg-whitelist=cv2"],
+    "python.autoComplete.extraPaths": ["/usr/lib/python3.6/dist-packages/cv2/python-3.6"],    
     "python.linting.pylintEnabled": false,
-    "python.linting.mypyEnabled": true,
+    "python.linting.mypyEnabled": false,
     "python.linting.enabled": true
 }
