--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "python.pythonPath": "/usr/bin/python3",
+    "python.pythonPath": "adaFruit/.venv/bin/python",
     "python.linting.pylintArgs": ["--generate-members", "--extension-pkg-whitelist=cv2"],
-    "python.autoComplete.extraPaths": ["/usr/lib/python3.6/dist-packages/cv2/python-3.6"],    
+    "python.autoComplete.extraPaths": ["~/Downloads/Python_stuff/adaFruit/.venv/lib/python3.8/site-packages"],    
     "python.linting.pylintEnabled": false,
     "python.linting.mypyEnabled": false,
     "python.linting.enabled": true
