second example working recognizer

--- a/FaceRecognizer/.vscode/settings.json
+++ b/FaceRecognizer/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "adaFruit/.venv/bin/python",
+    "python.pythonPath": "/home/bubba/Downloads/Python_stuff/adaFruit/.venv/bin/python",
     "python.linting.pylintArgs": ["--generate-members", "--extension-pkg-whitelist=cv2", 
                                   "--extension-pkg-whitelist=face_recognition"],
     "python.autoComplete.extraPaths": ["/home/bubba/Downloads/Python_stuff/adaFruit/.venv/lib/python3.8/site-packages"],    
